# HexaLab

./: .gitignore  CNAME  LICENSE  README.md  TODO.txt  index.html
cpp/include/: ifilter.h  mesh.h  model.h
cpp/src/: HexaLabTest.pro  Makefile  hexalab_js.cpp  test.cpp
css/: hexalab.css
datasets/: README.md  index.json  index_clean.json
datasets/2011 - All-Hex Mesh Generation via Volumetric PolyCube Deformation/: Kiss_hex_coarse.mesh  asm001.mesh  casting.mesh  fertility_refine.mesh
datasets/2016 - All-Hex Meshing Using Closed-Form Induced Polycube/: fancy_ring-hex.vtk  fertility-hex.mesh  fertility-hex.vtk  grayloc-hex.mesh  hollow-eight-hex.mesh  knot-hex.mesh  nut-hex.vtk  rockerarm-hex.mesh  rockerarm-hex.vtk
datasets/2016 - Efficient Volumetric PolyCube-Map Construction/: Dancing_Children_hex.vtk  Fertility_hex-largel.mesh  Fertility_hex-largel.vtk  Fertility_hex-small.mesh  Fertility_hex-small.vtk  Greek_Sculpture_hex.vtk  Rocker_hex.mesh
datasets/2019 - Symmetric Moving Frames/: README.txt  hex_brokenbullet.vtk  (+9 more)
img/: HexaLab_icon.ai
js/: hexalab.js  module.js  ui.js
src/: HexaLabTest.pro  Makefile  app.cpp  app.h  builder.cpp  builder.h  color_map.cpp  color_map.h  common.h  dart.h  hex_quality.h  hex_quality_color_maps.h  hexalab_js.cpp  ifilter.h  loader.cpp  loader.h  mesh.cpp  mesh.h  mesh_navigator.cpp  mesh_navigator.h  model.h  peeling_filter.cpp  peeling_filter.h  pick_filter.cpp  pick_filter.h  plane_filter.cpp  plane_filter.h  quality_filter.cpp  quality_filter.h  test.cpp  test_makefile
src/HexaLabTest/: CMakeLists.txt  test.cpp
(+956 files in other folders)
